--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <meta charset="utf-8">
-  <title>Arbre de Décision</title>
+  <title>Arbre de Décision </title>
   <link rel="shortcut icon" type="image/jpg" href="icons8-finance-document-100.png"/>
 </head>
 <body>
@@ -46,7 +46,7 @@
       <div class="card-header">Introduction</div>
       <div class="card-body text-dark">
         <h5 class="card-title">Bienvenue sur notre outil d'analyse financière et d'aide à la décision</h5>
-        <p class="card-text">Expliquer le fonctionnemenent (outil dynamique + en ligne + ...?)</p>
+        <p class="card-text">Expliquer le  fonctionnemenent (outil dynamique + en ligne + ...?)</p>
       </div>
     </div>
 
@@ -172,7 +172,7 @@
           <img src="IMG_2642.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Augustin Lacroix</h5>
-            <p class="card-text">bla bla bla...</p>
+            <p class="card-text">MTE 5, fils de Vali et fan de compta</p>
             </div>
         </div>
         <div class="card">
