--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
               <div class="card card-body">
                 <lu>
                   <li>
-                    Continuer à augmenter le FR et diminuer le BFR (voir ci-dessus) <i class="fas fa-camera-retro"></i>
+                    Continuer à augmenter le FR et diminuer le BFR (voir ci-dessus)
                   </li>
                   <li>
-                    Investissement <i data-bs-toggle="popover" data-bs-placement="right" title="En savoir plus" data-bs-content="Investir dans quelque chose de rentable (critère financier, organisation etc.)" class="bi bi-three-dots"></i>
+                    Investissement <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Investir dans quelque chose de rentable (critère financier, organisation etc.)" class="bi bi-three-dots"></i>
                   </li>
                   <li>
-                    Placements à court termes de l'excédant <i data-bs-toggle="popover" data-bs-placement="right" title="En savoir plus" data-bs-content="Placement qui rapport de l'argent" class="bi bi-three-dots"></i>
+                    Placements à court termes de l'excédant <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Placement qui rapport de l'argent" class="bi bi-three-dots"></i>
 
                   </li>
                 </div>
@@ -164,91 +164,172 @@
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
               <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
-                  Marge sur cout variable (CA - CV)
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                  Marge sur cout variable (CA - CV) & MCV Négatif
                 </button>
               </p>
-              <div class="collapse" id="">
+              <div class="collapse" id="collapseExample3">
+                <div class="btn-group-vertical">
+                  <div class="card card-body">
+                    Augmenter le Chiffre d'affaire
+                    <lu>
+                      <li>
+                        Vendre plus : Besoin de plus de client ou de vendre de plus grande quantité <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Trouver de nouveau client, sur de nouveau secteur par exemple. (campagne de communication )" class="bi bi-three-dots"></i>
+
+                      </li>
+                      <li>
+                        Vendre plus chère : Marges plus importante, Besoin de vendre moins. Dépendant de la condurance sur le marché.  <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Privilégier les clients qui paie le plus chère" class="bi bi-three-dots"></i>
+
+                      </li>
+                      <li>
+                        Trouver de nouveau client : Probablement un besoin de produire plus
+                      </li>
+                      <li>
+                        Fidéliser ces clients : Récurance des commandes <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Donner des avantages aux clients fidèles pour les garder, utiliser la règle des 80/20, 20% des clients apportent 80% du chiffres d'affaires, ils faut donc garder ces 20 % de clients" class="bi bi-three-dots"></i>
+                      </li>
+                    </lu>
+                  </br>
+                  Réduire les charges variable
+                  <ul>
+                    <li>
+                      Réduire le prix des matières premières<i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Faire du stock, pour réduire les prix unitaire (Attention voir BFR)" class="bi bi-three-dots"></i>
+                    </li>
+                    <li>
+                      Réduire le cout de fabrication : Coûts moins important pour produire la même quantité, donc possibilité de vendre plus mais peut avoir des impacts non désiré sur les produits : réduction de la qualité des produits
+                    </li>
+                    <li>
+                      Réduire les amortissement : Néfaste pour les investissements
+                      <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Ajuster les investissements fait et leurs amortissements affecté en fonction des besoins de l'entreprise" class="bi bi-three-dots"></i>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
-                  Résultat exploitation (MCV - CF)
-                </button>
-              </p>
-              <div class="collapse" id="">
+            </div>
+            <p>
+              <button class="btn btn-primary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
+                Résultat exploitation (MCV - CF)
+              </button>
+            </p>
+            <div class="collapse" id="collapseExample4">
+              <div class="btn-group-vertical">
+                <div class="card card-body">
+
+                    Resultat positif :
+                    <ul>
+                      <li>
+                       Optimiser les amortissements, investissements, bénéfices sorties <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Faire travailler son argent!" class="bi bi-three-dots"></i>
+
+                      </li>
+                    </ul>
+
+                  Resultat négatif :
+                  <ul>
+                    <li>
+                      Réduire les charges fixes en réduisant le nombre d'emploi : Besoin de personnel temporaire par période (Augmentation des charges variables)<i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Externaliser certaine partie de la production (celle qui font perdre de l'argent à l'entreprise)" class="bi bi-three-dots"></i>
+
+                    </li>
+                    <li>
+                      Réduire les charges fixes en réduisant les charges de structures : On ne pas toujours réduire ces charges et il y a un seuil maximum <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Trouver des locaux moins onéreux / Réduire les charges d'assurances, de fonctionnement etc. " class="bi bi-three-dots"></i>
+                    </li>
+                    <li>
+                      Augmenter MCV (Voir MCV Négatif)
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
-                  Seuil de renta (CA*CF / MCV)
-                </button>
-              </p>
-              <div class="collapse" id="">
+            </div>
+            <p>
+              <button class="btn btn-primary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
+                Seuil de renta (CA*CF / MCV)
+              </button>
+            </p>
+            <div class="collapse" id="collapseExample5">
+              <div class="btn-group-vertical">
+                <div class="card card-body">
+
+                    Seuil de renta supérieur au Chiffre d'affaire
+                    <ul>
+                      <li>
+                      Augmenter MCV (cf MCV négative) <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Si le seuil de rentabilité est suppérieur aux chiffres d'affaires durant plusieurs année, la situation est critique, il faut revoir le modèle et/ou les emplois et/ou les clients visés etc... " class="bi bi-three-dots"></i>
+
+                      </li>
+                      <li>
+                        Augmenter CA
+                      </li>
+                    </ul>
+
+
+                </div>
               </div>
+            </div>
+
+
+
+          </div>
+        </div>
+      </div>
+      <!--  _______________________________________________SIG___________________________________ -->
+      <div class=" mt-5" id="sig">
+        <div class="card border-dark" >
+          <div class="card-header">SIG</div>
+          <div class="card-body text-dark">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
+                Marges commercial
+              </button>
+            </p>
+            <div class="collapse" id="Marges commercial">
             </div>
           </div>
         </div>
-        <!--  _______________________________________________SIG___________________________________ -->
-        <div class=" mt-5" id="sig">
-          <div class="card border-dark" >
-            <div class="card-header">SIG</div>
-            <div class="card-body text-dark">
-              <h5 class="card-title"></h5>
-              <p class="card-text"></p>
-              <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
-                  Marges commercial
-                </button>
-              </p>
-              <div class="collapse" id="Marges commercial">
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <!--  _______________________________________________EQUIPE ___________________________________ -->
-      <h1 class="mt-5">Equipe</h1>
-      <div class="card-group m-3" id="equipe">
-        <div class="card">
-          <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Augustin Lacroix</h5>
-            <p class="card-text">MTE 5, fils de Vali et fan de compta</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Jean Baptiste Baclet</h5>
-            <p class="card-text">bla bla bla...</p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Antonin Marcon</h5>
-            <p class="card-text">bla bla bla...</p>
-          </div>
-        </div>
       </div>
 
-      <div class="card border-dark mb-3" style="height:500px;"  id="emprunt">
-        <div class="card-header">Outil n°1</div>
-        <div class="card-body text-dark">
-          <h5 class="card-title">Calcul d'emprunt</h5>
-          <iframe width=100% height=100%  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    </div>
+    <!--  _______________________________________________EQUIPE ___________________________________ -->
+    <h1 class="mt-5">Equipe</h1>
+    <div class="card-group m-3" id="equipe">
+      <div class="card">
+        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Augustin Lacroix</h5>
+          <p class="card-text">MTE 5, fils de Vali et fan de compta</p>
         </div>
       </div>
+      <div class="card">
+        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Jean Baptiste Baclet</h5>
+          <p class="card-text">bla bla bla...</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Antonin Marcon</h5>
+          <p class="card-text">ISI 5 </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card border-dark mb-3" style="height:500px;"  id="emprunt">
+      <div class="card-header">Outil n°1</div>
+      <div class="card-body text-dark">
+        <h5 class="card-title">Calcul d'emprunt</h5>
+        <iframe width=100% height=100%  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      </div>
+    </div>
 
 
 
-      <script>
-      var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-      var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-        return new bootstrap.Popover(popoverTriggerEl)
-      })</script>
+    <script>
+    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+      return new bootstrap.Popover(popoverTriggerEl)
+    })</script>
 
 
 
-    </body>
-    </html>
+  </body>
+  </html>
