--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="card-header">Trésorerie</div>
         <div class="card-body text-dark">
           <h5 class="card-title">Analyse du fond de roulement de l'entreprise</h5>
-          <p class="card-text">Cliquer sur l'état de votre Trésorerie</p>
+          <p class="card-text">Cliquez sur l'état de votre Trésorerie</p>
           <p>
             <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
               Négative
@@ -161,8 +161,8 @@
           <div class="card border-dark" >
             <div class="card-header">Rentabilité</div>
             <div class="card-body text-dark">
-              <h5 class="card-title"></h5>
-              <p class="card-text"></p>
+              <h5 class="card-title">Analyse du chiffre d'affaire de l'entreprise</h5>
+              <p class="card-text">Cliquez sur la variable que vous souhaitez analysé</p>
               <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
                   Marge sur cout variable (CA - CV) & MCV Négatif
@@ -240,14 +240,14 @@
             </div>
             <p>
               <button class="btn btn-primary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
-                Seuil de renta (CA*CF / MCV)
+                Seuil de rentabilité (CA*CF / MCV)
               </button>
             </p>
             <div class="collapse" id="collapseExample5">
               <div class="btn-group-vertical">
                 <div class="card card-body">
 
-                  Seuil de renta supérieur au Chiffre d'affaire
+                  Seuil de rentabilité supérieur au Chiffre d'affaire
                   <ul>
                     <li>
                       Augmenter MCV (cf MCV négative) <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Si le seuil de rentabilité est suppérieur aux chiffres d'affaires durant plusieurs année, la situation est critique, il faut revoir le modèle et/ou les emplois et/ou les clients visés etc... " class="bi bi-three-dots"></i>
@@ -273,63 +273,220 @@
         <div class="card border-dark" >
           <div class="card-header">SIG</div>
           <div class="card-body text-dark">
-            <h5 class="card-title"></h5>
-            <p class="card-text"></p>
-            <p>
-              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="" aria-expanded="false" aria-controls="collapseExample">
-                Marges commercial
-              </button>
-            </p>
-            <div class="collapse" id="Marges commercial">
+            <h5 class="card-title">Soldes intermédiaires de gestion</h5>
+            <p class="card-text">Cliquez sur l'indicateur que vous souhaitez analyser</p>
+            <p class="mt-3">
+              Marges commercial (ventes de marchandises - Coût d'achat des marchandises vendues)
+            </br>
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample6" aria-expanded="false" aria-controls="collapseExample">
+              Marge commercial faible/négative
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample6">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                Réduire les coûts d'achats
+                <ul>
+                  <li>
+                    Faire des stocks (acheter en plus gros pour réduire le prix) : Besoin en trésorie moins important, coût plus faible mais attention au coût lié au stockage des marchandise
+                  </li>
+                  <li>
+                    Acheter chez un fournisseur moins chère : On peut utiliser le caractéres concurrentiel du marché mais la qualité des produits peut être différents / le délais de paiement aussi
+                  </li>
+                </ul>
+                Augmenter les ventes
+                <ul>
+                  <li>
+                    Vendre plus <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Trouver de nouveaux client, trouver de nouvelle cible  " class="bi bi-three-dots"></i>
+                  </li>
+                  <li>
+                    Vendre plus chère <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Changer de cibles - trouver des clients pouvant payer plus chère " class="bi bi-three-dots"></i>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
+
+          <p class="mt-3">
+            Production de l'exercice (Production vendue + productio stockée + production immobilisée)
+            <br />
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample7" aria-expanded="false" aria-controls="collapseExample">
+              Production en hausse
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample7">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    Attention aux coûts de stockage des marchandises
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <p class="mt-3">
+            Valeur ajouté (Marges commercial + production de l'excercice - achats de matières (+ ou - variation stocks) - services externes )
+
+            <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Si trop faible ou trop elevé, l'entreprise est fragile car elle ne maîtrise pas totalement son activité " class="bi bi-three-dots"></i>
+            <br />
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample8" aria-expanded="false" aria-controls="collapseExample">
+              Valeur ajouté faible
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample8">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    Augmenter la marge commercial (cf marge commerciale)
+                  </li>
+                  <li>
+                    Augmenter la production de l'excercice
+                  </li>
+                  <li>
+                    Réduire les coûts de matières premières (cf partie réduction des charges variables)
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <p class="mt-3">
+            EBE (Valeur ajouté - Impôts et taxes - charges de personnel) (mesure le résultat avant intégration des amortissements)
+            <br />
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample9" aria-expanded="false" aria-controls="collapseExample">
+              EBE positif
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample9">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    L'entreprise est rentable avec son activité <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Après la valeur ajouté, l'EBE mesure les résultats de l'entreprise avant les amortissements. C'est un critère financier qui peut évaluer la capacité d'un projet à créer de la valeur et à être financièrement stable.  " class="bi bi-three-dots"></i>
+
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample10" aria-expanded="false" aria-controls="collapseExample">
+            EBE négatif
+          </button>
+          <div class="collapse mt-3" id="collapseExample10">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    Réduire les charges <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Après la valeur ajouté, l'EBE mesure les résultats de l'entreprise avant les amortissements. C'est un critère financier qui peut évaluer la capacité d'un projet à créer de la valeur et à être financièrement stable.  " class="bi bi-three-dots"></i>
+
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <p class="mt-3">
+            Résultat exeptionnel (Produits exceptionnels - charges exceptionnelles)
+            <br />
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample11" aria-expanded="false" aria-controls="collapseExample">
+              Résultat expetionnel important
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample11">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    Attention cela peut venir gonfler le résultat de l'entreprise et cacher de mauvais résultat par exemple. <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Le résultat exeptionnel rapporte les éléments financière qui ne sont pas récuperent dans l'entreprise " class="bi bi-three-dots"></i>
+
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <p class="mt-3">
+            Résultat de l'excercice ( Résultat courant + Résultat exceptionnel - Participation des salariés - impôts sur le bénéfice)
+            <br />
+            <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample12" aria-expanded="false" aria-controls="collapseExample">
+              Résultat négatif
+            </button>
+          </p>
+          <div class="collapse" id="collapseExample12">
+            <div class="btn-group-vertical">
+              <div class="card card-body">
+                <ul>
+                  <li>
+                    Réduire les charges par rapport au CA
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
-
     </div>
-    <!--  _______________________________________________EQUIPE ___________________________________ -->
-    <h1 class="mt-5">Equipe</h1>
-    <div class="card-group m-3" id="equipe">
-      <div class="card">
-        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Augustin Lacroix</h5>
-          <p class="card-text">MTE 5, fils de Vali et fan de compta</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Jean Baptiste Baclet</h5>
-          <p class="card-text">bla bla bla...</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Antonin Marcon</h5>
-          <p class="card-text">ISI 5 </p>
-        </div>
+
+  </div>
+  <!--  _______________________________________________EQUIPE ___________________________________ -->
+  <h1 class="mt-5">Equipe</h1>
+  <div class="card-group m-3" id="equipe">
+    <div class="card">
+      <img src="IMG_1640.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Augustin</h5>
+        <p class="card-text">MTE 5, fils de Vali et fan de compta
+          <br />
+          <a href = "mailto: augustin.lacroix@utt.fr"><i class="bi bi-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/augustin-lacroix-a97140194/"><i class="bi bi-linkedin"></i></a>
+        </p>
       </div>
     </div>
-
-    <div class="card border-dark mb-3" style="height:500px;"  id="emprunt">
-      <div class="card-header">Outil n°1</div>
-      <div class="card-body text-dark">
-        <h5 class="card-title">Calcul d'emprunt</h5>
-        <iframe width=100% height=100%  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <div class="card">
+      <img src="IMG_5254.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Jean-Baptiste</h5>
+        <p class="card-text"> GM6, mot d'ordre : "Investissez dans la pierre".
+          <br />
+          <a href = "mailto: jean_baptiste.baclet@utt.fr"><i class="bi bi-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/jean-baptiste-baclet-0146a8163/"><i class="bi bi-linkedin"></i></a>
+        </p>
       </div>
     </div>
+    <div class="card">
+      <img src="IMG_2642.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Antonin</h5>
+        <p class="card-text">ISI 5, passioné de crypto-monnaies et d'investissements boursiers.
+          <br />
+          <a href = "mailto: antonin.marcon@utt.fr"><i class="bi bi-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/antonin-marcon-utt/"><i class="bi bi-linkedin"></i></a>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card border-dark mb-3" style="height:500px;"  id="emprunt">
+    <div class="card-header">Outil n°1</div>
+    <div class="card-body text-dark">
+      <h5 class="card-title">Calcul d'emprunt</h5>
+      <iframe width=100% height=100%  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    </div>
+  </div>
 
 
 
-    <script>
-    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-      return new bootstrap.Popover(popoverTriggerEl)
-    })</script>
+  <script>
+  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+    return new bootstrap.Popover(popoverTriggerEl)
+  })</script>
 
 
 
-  </body>
-  </html>
+</body>
+</html>
