--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           <li>
             <a class="nav-link" href="#emprunt">Calcul d'emprunt</a>
           </li>
+          <li>
+            <a class="nav-link" href="#investissement">Investissement</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#decision">Décision</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -432,59 +438,106 @@
     </div>
 
   </div>
-  <!--  _______________________________________________EQUIPE ___________________________________ -->
-  <h1 class="mt-5">Equipe</h1>
-  <div class="card-group m-3" id="equipe">
-    <div class="card">
-      <img src="IMG_1640.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Augustin</h5>
-        <p class="card-text">MTE 5, fils de Vali et fan de compta
-          <br />
-          <a href = "mailto: augustin.lacroix@utt.fr"><i class="bi bi-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/augustin-lacroix-a97140194/"><i class="bi bi-linkedin"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="IMG_5254.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Jean-Baptiste</h5>
-        <p class="card-text"> GM6, mot d'ordre : "Investissez dans la pierre".
-          <br />
-          <a href = "mailto: jean_baptiste.baclet@utt.fr"><i class="bi bi-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/jean-baptiste-baclet-0146a8163/"><i class="bi bi-linkedin"></i></a>
-        </p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="IMG_2642.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Antonin</h5>
-        <p class="card-text">ISI 5, passioné de crypto-monnaies et d'investissements boursiers.
-          <br />
-          <a href = "mailto: antonin.marcon@utt.fr"><i class="bi bi-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/antonin-marcon-utt/"><i class="bi bi-linkedin"></i></a>
-        </p>
-      </div>
-    </div>
-  </div>
 
-  <div class="card border-dark mb-3" style="height:500px;"  id="emprunt">
+  <!--  _______________________________________________OUTIL N°1___________________________________ -->
+  <div class="card border-dark mt-5 mb-3" style="height:700px;"  id="emprunt">
+
     <div class="card-header">Outil n°1</div>
     <div class="card-body text-dark">
       <h5 class="card-title">Calcul d'emprunt</h5>
-      <iframe width=100% height=100%  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      <p class="card-text">Ces tableaux permettent de réaliser des simulations d'un emprunt en fonction de méthode de remboursement différentes. Lorsque l'on souhaite faire un emprunt, pour un investissement, pour avoir de la trésorie ou pour d'autre raison, il est indispensable de trouver la méthode de remboursement idéale pour financer son besoin. Ils permettent aussi de simuler les frais engendrés par les emprunts et de visualiser les mensualités, l'amortissement etc.. Vous pouvez directement visualiser votre projet en modifiant les informations sur ces tableaux : Montant, taux d'intéret, durée de l'emprunt etc..
+
+      </p>
+      <iframe width=100% height=450px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=922121241&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      <p class="card-text">
+        Pour accéder à l'outil, cliquez sur le lien : <a href="https://docs.google.com/spreadsheets/d/1l9HP0RDxtAbRSwWvg25wlSj4goOL3pB5UlRiMy4Dh5Q/edit?usp=sharing"><i class="bi bi-file-earmark"></i></a>
+      </p>
+    </p>
+  </div>
+</div>
+
+<!--  _______________________________________________OUTIL N°2___________________________________ -->
+<div class="card border-dark mt-5 mb-3" style="height:700px;"  id="investissement">
+
+  <div class="card-header">Outil n°2</div>
+  <div class="card-body text-dark">
+    <h5 class="card-title">Investissement</h5>
+    <p class="card-text">Ces tableaux permettent de réaliser des simulations d'un emprunt en fonction de méthode de remboursement différentes. Lorsque l'on souhaite faire un emprunt, pour un investissement, pour avoir de la trésorie ou pour d'autre raison, il est indispensable de trouver la méthode de remboursement idéale pour financer son besoin. Ils permettent aussi de simuler les frais engendrés par les emprunts et de visualiser les mensualités, l'amortissement etc.. Vous pouvez directement visualiser votre projet en modifiant les informations sur ces tableaux : Montant, taux d'intéret, durée de l'emprunt etc..
+
+    </p>
+    <iframe width=100% height=450px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=2065159221&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <p class="card-text">
+      Pour accéder à l'outil, cliquez sur le lien : <a href="https://docs.google.com/spreadsheets/d/1UDOiiiageeEMhtFjPkLsqY9n8GLjkUCP3kyh14sEgWs/edit?usp=sharing"><i class="bi bi-file-earmark"></i></a>
+    </p>
+  </p>
+</div>
+</div>
+
+<!--  _______________________________________________OUTIL N°3___________________________________ -->
+<div class="card border-dark mt-5 mb-3" style="height:570px;"  id="decision">
+
+  <div class="card-header">Outil n°3</div>
+  <div class="card-body text-dark">
+    <h5 class="card-title">Matrice de décision</h5>
+    <p class="card-text">Ce tableau permet de mettre en place une matrice de décision, afin d'évaluer selon différents critères (a modifier selon la décision à prendre), le choix le plus interessant à faire dans une décision financière sur le choix d'une fournisseur par exemple. (Attention plus le critère est important, plus le valeur de la pondération doit être importante - valeur entre 5 et 1)
+
+
+
+    </p>
+    <iframe width=100% height=350px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSIOY_rNX-p8MZpqFcFpwDgcrP6FNUrD31dpLMttsxT7NtBpZlz726-QG0d5kP8kA/pubhtml?gid=1751998155&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    <p class="card-text">
+      Pour accéder à l'outil, cliquez sur le lien : <a href="https://docs.google.com/spreadsheets/d/1mcFSJcxJmuKju0B8p1qU4cH43zHELgzpiYmt88RqyV8/edit?usp=sharing"><i class="bi bi-file-earmark"></i></a>
+    </p>
+  </p>
+</div>
+</div>
+
+<!--  _______________________________________________EQUIPE ___________________________________ -->
+
+<h1 class="mt-5">Equipe</h1>
+<div class="card-group m-3" id="equipe">
+  <div class="card">
+    <img src="IMG_1640.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Augustin</h5>
+      <p class="card-text">MTE 5, fils de Vali et fan de compta
+        <br />
+        <a href = "mailto: augustin.lacroix@utt.fr"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/augustin-lacroix-a97140194/"><i class="bi bi-linkedin"></i></a>
+      </p>
     </div>
   </div>
+  <div class="card">
+    <img src="IMG_5254.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Jean-Baptiste</h5>
+      <p class="card-text"> GM6, mot d'ordre : "Investissez dans la pierre".
+        <br />
+        <a href = "mailto: jean_baptiste.baclet@utt.fr"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/jean-baptiste-baclet-0146a8163/"><i class="bi bi-linkedin"></i></a>
+      </p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="IMG_2642.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Antonin</h5>
+      <p class="card-text">ISI 5, passioné de crypto-monnaies et d'investissements boursiers.
+        <br />
+        <a href = "mailto: antonin.marcon@utt.fr"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/antonin-marcon-utt/"><i class="bi bi-linkedin"></i></a>
+      </p>
+    </div>
+  </div>
+</div>
 
 
 
-  <script>
-  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-    return new bootstrap.Popover(popoverTriggerEl)
-  })</script>
+<script>
+var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})</script>
 
 
 
