--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <a class="nav-link" href="#sig">SIG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#equipe">Equipe</a>
+            <a class="nav-link" href="#financement">Financement</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#ratio">Ratio</a>
           </li>
           <li>
             <a class="nav-link" href="#emprunt">Calcul d'emprunt</a>
@@ -41,6 +44,9 @@
           </li>
           <li>
             <a class="nav-link" href="#decision">Décision</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#equipe">Equipe</a>
           </li>
         </ul>
       </div>
@@ -438,6 +444,118 @@
     </div>
 
   </div>
+
+  <!--  _______________________________________________FINANCEMENT__________________________________ -->
+  <div class="mt-5" id="financement">
+    <div class="card border-dark" >
+      <div class="card-header">Financement</div>
+      <div class="card-body text-dark">
+        <h5 class="card-title">Informations sur les financements</h5>
+        <p class="card-text"></p>
+        <p>
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample13" aria-expanded="false" aria-controls="collapseExample">
+            Besoin d'un financement
+          </button>
+        </p>
+        <div class="collapse mb-3" id="collapseExample13">
+          <div class="card card-body">
+            <ul>
+              <li>
+                Solliciter ces actionnaires : Pas d'intêret / pas de remboursement à date fini mais il faut que les actionnaires acceptent
+              </li>
+              <li>
+                Emprunt bancaire à remboursement par amortissements constants
+              </li>
+              <li>
+                Emprunt bancaire à remboursement par annuités constantes
+              </li>
+              <li>
+                Emprunt bancaire à remboursement "in fine" : Remboursement seulement à la fin mais il faut être sur de pouvoir rembourser à la fin
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+  <!--  _______________________________________________RATIO___________________________________ -->
+
+  <div class="mt-5" id="financement">
+    <div class="card border-dark" >
+      <div class="card-header">Financement</div>
+      <div class="card-body text-dark">
+        <h5 class="card-title">Informations sur les financements</h5>
+        <p class="card-text"></p>
+        <p class="mt-3">
+          Taux de marges brut (EBE / CA) : Représente la capacité de l'entreprise à créer de la valeur sur son exploitation (marger)<br />
+          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample14" aria-expanded="false" aria-controls="collapseExample">
+            Taux de marges brut en augmentation
+          </button>
+        </p>
+        <div class="collapse mb-3" id="collapseExample14">
+          <div class="card card-body">
+            <ul>
+              <li>
+                C'est profitable, notre valeur ajouté augmente par rapport au chiffre d'affaires,la marge brute est le premier juge du pouvoir de négociation de l'entreprise auprès de ses clients et de ses fournisseurs. Plus l'entreprise a un fort pouvoir de négociation, plus sa marge brute est importante.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample15" aria-expanded="false" aria-controls="collapseExample">
+          Taux de marges brut en diminution
+        </button>
+        <div class="collapse mb-3" id="collapseExample15">
+          <div class="card card-body">
+            <ul>
+              <li>
+                Voir augmentation EBE
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <p class="mt-3">
+          Ratio de rentabilité financière (Résultat courant avant impots / capitaux propres)<br />
+          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample16" aria-expanded="false" aria-controls="collapseExample">
+            Est-ce rentable d'investir des capitaux dans l'entreprise?
+          </button>
+        </p>
+        <div class="collapse mb-3" id="collapseExample16">
+          <div class="card card-body">
+            <ul>
+              <li>
+                Rapporte la rentailité de l'exploitation pour les appoteurs de capitaux
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <p class="mt-3">
+          Ratio de rentabilité économique (EBE / Ressources stables) <br />
+          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample16" aria-expanded="false" aria-controls="collapseExample">
+            Est-ce rentable d'investir des capitaux dans l'entreprise sur le long terme?
+          </button>
+        </p>
+        <div class="collapse mb-3" id="collapseExample16">
+          <div class="card card-body">
+            <ul>
+              <li>
+                Ne dépend pas des éléments exceptionnels
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
 
   <!--  _______________________________________________OUTIL N°1___________________________________ -->
   <div class="card border-dark mt-5 mb-3" style="height:700px;"  id="emprunt">
