--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </nav>
 
 
-  <div style="margin-top:100px;" class="container"  id="page">
+  <div style="padding-top: 80px;" class="container"  id="page">
     <!--  _______________________________________________INTRO ___________________________________ -->
 
     <div class="card border-dark mb-3" style="max-width: 25rem;">
@@ -485,11 +485,11 @@
 
   <!--  _______________________________________________RATIO___________________________________ -->
 
-  <div class="mt-5" id="financement">
+  <div class="mt-5" id="ratio">
     <div class="card border-dark" >
-      <div class="card-header">Financement</div>
+      <div class="card-header">Ratio</div>
       <div class="card-body text-dark">
-        <h5 class="card-title">Informations sur les financements</h5>
+        <h5 class="card-title">Informations sur les ratios</h5>
         <p class="card-text"></p>
         <p class="mt-3">
           Taux de marges brut (EBE / CA) : Représente la capacité de l'entreprise à créer de la valeur sur son exploitation (marger)<br />
@@ -509,7 +509,7 @@
         <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample15" aria-expanded="false" aria-controls="collapseExample">
           Taux de marges brut en diminution
         </button>
-        <div class="collapse mb-3" id="collapseExample15">
+        <div class="collapse mt-3 mb-3" id="collapseExample15">
           <div class="card card-body">
             <ul>
               <li>
@@ -537,11 +537,11 @@
 
         <p class="mt-3">
           Ratio de rentabilité économique (EBE / Ressources stables) <br />
-          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample16" aria-expanded="false" aria-controls="collapseExample">
+          <button class="btn btn-primary mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample17" aria-expanded="false" aria-controls="collapseExample">
             Est-ce rentable d'investir des capitaux dans l'entreprise sur le long terme?
           </button>
         </p>
-        <div class="collapse mb-3" id="collapseExample16">
+        <div class="collapse mb-3" id="collapseExample17">
           <div class="card card-body">
             <ul>
               <li>
