--- a/index.html
+++ b/index.html
@@ -57,11 +57,35 @@
   <div style="padding-top: 80px;" class="container"  id="page">
     <!--  _______________________________________________INTRO ___________________________________ -->
 
-    <div class="card border-dark mb-3" style="max-width: 25rem;">
+    <div class="card border-dark mb-3" >
       <div class="card-header">Introduction</div>
       <div class="card-body text-dark">
         <h5 class="card-title">Bienvenue sur notre outil d'analyse financière et d'aide à la décision</h5>
-        <p class="card-text">C'est un outil simple et dynamique qui permet de visualiser toutes les configurations possibles d'une entreprise sur sa situation financière</p>
+        <p class="card-text">Ce site va vous permettre de comprendre et d’utiliser différents outils d’analyses financières d’une entreprise telle que :
+          <ul>
+          <li>
+            La gestion de trésorerie
+          </li>
+          <li>
+          L’analyse de la rentabilité et du chiffre d’affaire d’une entreprise
+        </li>
+        <li>
+          Les soldes intermédiaires de gestion permettant une analyse plus précise des résultats de l’entreprise et de voir les points qui flanchent dans celle-ci
+        </li>
+        <li>
+          L’utilisation des ratio pour analyser la marge et la rentabilité d’une entreprise
+        </li>
+      </ul>
+Pour chaque section, vous pouvez cliquer sur le sujet qui vous intéresse et y voir des analyses, des solutions ou encore nos conseils (en cliquant sur les “...” en fin de ligne)
+</br>
+Nous avons également mis à disposition des informations permettant de faire le bon choix de financement ainsi que plusieurs outils d'aide à la décision sous la forme de tableaux Excel.
+</br>
+Ces outils vous permettront de réaliser par exemple des simulations sur les différentes méthodes de remboursement d’un emprunt,
+ d’analyser des investissements et leurs intérêts financier et stratégique, ou encore de vous aider à faire des choix rationels en utilisant notre matrice de décision.
+Pour chaque outil de décision, nous vous avons exposé la visualisation de l’outil sur notre site. Vous pouvez aussi accéder aux tableaux modifiables grâce aux liens présents en-dessous.
+</br>
+Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N’hésitez pas à nous partager vos retours en nous contactant par mail. Pour cela, cliquez sur l'icône mail dans la partie “Equipe”.
+</p>
       </div>
     </div>
 
@@ -83,7 +107,7 @@
               <lu>
                 <li>
                   Solliciter les actionnaires : Augmenter le capital et limiter les distributions de dividende
-                  <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Privilégier l'investissement par les actionnaires plutôt qu'un emprunt 
+                  <i data-bs-toggle="popover" data-bs-placement="right" title="Notre Conseil" data-bs-content="Privilégier l'investissement par les actionnaires plutôt qu'un emprunt
                   " class="bi bi-three-dots"></i>
                 </li>
                 <li>
