--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
     </div>
 
     <!--  _______________________________________________TRESORERIE ___________________________________ -->
-    <div  id="treso">
+    <div id="treso"></div>
+    <br/>
+    <div class="mt-5">
       <div class="card border-dark" >
         <div class="card-header">Trésorerie</div>
         <div class="card-body text-dark">
@@ -193,7 +195,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
           </div>
         </div>
         <!--  _______________________________________________RENTABILITE ___________________________________ -->
-        <div class="mt-5" id="rent">
+        <div id="rent"></div>
+        <br/>
+        <div class="mt-5">
           <div class="card border-dark" >
             <div class="card-header">Rentabilité</div>
             <div class="card-body text-dark">
@@ -305,7 +309,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
         </div>
       </div>
       <!--  _______________________________________________SIG___________________________________ -->
-      <div class=" mt-5" id="sig">
+      <div id="sig"></div>
+      <br/>
+      <div class="mt-5">
         <div class="card border-dark" >
           <div class="card-header">SIG</div>
           <div class="card-body text-dark">
@@ -470,7 +476,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
   </div>
 
   <!--  _______________________________________________FINANCEMENT__________________________________ -->
-  <div class="mt-5" id="financement">
+  <div id="financement"></div>
+  <br/>
+  <div class="mt-5">
     <div class="card border-dark" >
       <div class="card-header">Financement</div>
       <div class="card-body text-dark">
@@ -508,8 +516,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
 
 
   <!--  _______________________________________________RATIO___________________________________ -->
-
-  <div class="mt-5" id="ratio">
+  <div id="ratio"></div>
+  <br/>
+  <div class="mt-5">
     <div class="card border-dark" >
       <div class="card-header">Ratio</div>
       <div class="card-body text-dark">
@@ -582,7 +591,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
 
 
   <!--  _______________________________________________OUTIL N°1___________________________________ -->
-  <div class="card border-dark mt-5 mb-3" style="height:700px;"  id="emprunt">
+  <div id="emprunt"></div>
+  <br/>
+  <div class="card border-dark mt-5 mb-3" style="height:700px;"  >
 
     <div class="card-header">Outil n°1</div>
     <div class="card-body text-dark">
@@ -599,7 +610,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
 </div>
 
 <!--  _______________________________________________OUTIL N°2___________________________________ -->
-<div class="card border-dark mt-5 mb-3" style="height:700px;"  id="investissement">
+<div id="investissement"></div>
+<br/>
+<div class="card border-dark mt-5 mb-3" style="height:700px;">
 
   <div class="card-header">Outil n°2</div>
   <div class="card-body text-dark">
@@ -616,7 +629,9 @@ Pour finir en beauté, vous pouvez retrouver une description de notre équipe. N
 </div>
 
 <!--  _______________________________________________OUTIL N°3___________________________________ -->
-<div class="card border-dark mt-5 mb-3" style="height:570px;"  id="decision">
+<div id="decision"></div>
+<br/>
+<div class="card border-dark mt-5 mb-3" style="height:570px;">
 
   <div class="card-header">Outil n°3</div>
   <div class="card-body text-dark">
